cleaned some things up