@@ -4,26 +4,19 @@ import org.lwjgl.opengl.GL40;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 
 public class Shader {
     public Shader(String pVertexShader, String pFragmentShader) {
         try {
-            List<String> lines = Files.readAllLines(Paths.get(pVertexShader));
-
-            for (int i = 0; i < lines.size(); i++) {
-                vertexShader += lines.get(i);
-            }
+            vertexShader = Files.readString(Path.of(pVertexShader) );
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
         try {
-            List<String> lines = Files.readAllLines(Paths.get(pFragmentShader));
-
-            for (int i = 0; i < lines.size(); i++) {
-                fragmentShader += lines.get(i);
-            }
+            fragmentShader = Files.readString(Path.of(pFragmentShader) );
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
